--- a/sdk/sysvar/Cargo.toml
+++ b/sdk/sysvar/Cargo.toml
@@ -44,6 +44,9 @@ base64 = { workspace = true }
 bitflags = { workspace = true }
 solana-program-memory = { workspace = true }
 
+[target.'cfg(target_os = "solana")'.dependencies]
+solana-define-syscall = { workspace = true }
+
 [dev-dependencies]
 anyhow = { workspace = true }
 serial_test = { workspace = true }
