--- a/sdk/sysvar/Cargo.toml
+++ b/sdk/sysvar/Cargo.toml
@@ -10,33 +10,33 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-bincode = { workspace = true }
+bincode = { workspace = true, optional = true }
 bytemuck = { workspace = true }
 bytemuck_derive = { workspace = true }
 lazy_static = { workspace = true }
 qualifier_attr = { workspace = true, optional = true }
-serde = { workspace = true }
-serde_derive = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
 solana-account-info = { workspace = true }
-solana-clock = { workspace = true, features = ["serde", "sysvar"] }
-solana-epoch-rewards = { workspace = true, features = ["serde", "sysvar"] }
-solana-epoch-schedule = { workspace = true, features = ["serde", "sysvar"] }
-solana-fee-calculator = { workspace = true, features = ["serde"] }
+solana-clock = { workspace = true, features = ["sysvar"] }
+solana-epoch-rewards = { workspace = true, features = ["sysvar"] }
+solana-epoch-schedule = { workspace = true, features = ["sysvar"] }
+solana-fee-calculator = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-hash = { workspace = true, features = ["bytemuck"] }
 solana-instruction = { workspace = true }
-solana-last-restart-slot = { workspace = true, features = ["serde", "sysvar"] }
+solana-last-restart-slot = { workspace = true, features = ["sysvar"] }
 solana-program-entrypoint = { workspace = true }
 solana-program-error = { workspace = true }
 solana-pubkey = { workspace = true }
-solana-rent = { workspace = true, features = ["serde", "sysvar"] }
+solana-rent = { workspace = true, features = ["sysvar"] }
 solana-sanitize = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-sdk-macro = { workspace = true }
 solana-serialize-utils = { workspace = true }
-solana-slot-hashes = { workspace = true, features = ["serde", "sysvar"] }
-solana-slot-history = { workspace = true, features = ["serde", "sysvar"] }
+solana-slot-hashes = { workspace = true, features = ["sysvar"] }
+solana-slot-history = { workspace = true, features = ["sysvar"] }
 solana-sysvar-id = { workspace = true }
 
 [target.'cfg(not(target_os = "solana"))'.dependencies]
@@ -54,11 +54,25 @@ solana-msg = { workspace = true }
 solana-program = { path = "../program" }
 solana-sdk = { path = ".." }
 solana-sha256-hasher = { workspace = true }
+solana-sysvar = { path = ".", features = ["dev-context-only-utils"] }
 test-case = { workspace = true }
 
 [features]
-dev-context-only-utils = ["dep:qualifier_attr"]
+bincode = ["dep:bincode", "serde"]
+dev-context-only-utils = ["dep:qualifier_attr", "bincode"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+serde = [
+    "dep:serde",
+    "dep:serde_derive",
+    "solana-clock/serde",
+    "solana-epoch-rewards/serde",
+    "solana-epoch-schedule/serde",
+    "solana-fee-calculator/serde",
+    "solana-last-restart-slot/serde",
+    "solana-rent/serde",
+    "solana-slot-hashes/serde",
+    "solana-slot-history/serde",
+]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
