make std optional

--- a/sdk/keccak-hasher/Cargo.toml
+++ b/sdk/keccak-hasher/Cargo.toml
@@ -38,10 +38,11 @@ sha3 = { workspace = true, optional = true }
 solana-define-syscall = { workspace = true }
 
 [features]
-borsh = ["dep:borsh"]
-frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
+borsh = ["dep:borsh", "std"]
+frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "std"]
 serde = ["dep:serde", "dep:serde_derive"]
 sha3 = ["dep:sha3"]
+std = ["solana-hash/std"]
 
 [lints]
 workspace = true
