--- a/pubsub-client/Cargo.toml
+++ b/pubsub-client/Cargo.toml
@@ -32,6 +32,8 @@ url = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
+solana-commitment-config = { workspace = true }
+solana-pubkey = { workspace = true, features = ["rand"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
