--- a/sdk/secp256k1-program/Cargo.toml
+++ b/sdk/secp256k1-program/Cargo.toml
@@ -16,9 +16,9 @@ libsecp256k1 = { workspace = true, features = ["hmac"] }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 sha3 = { workspace = true }
-solana-feature-set = { workspace = true }
-solana-instruction = { workspace = true, features = ["std"] }
-solana-precompile-error = { workspace = true }
+solana-feature-set = { workspace = true, optional = true }
+solana-instruction = { workspace = true, features = ["std"], optional = true }
+solana-precompile-error = { workspace = true, optional = true }
 solana-sdk-ids = { workspace = true, optional = true }
 
 [dev-dependencies]
@@ -29,12 +29,17 @@ solana-hash = { workspace = true }
 solana-logger = { workspace = true }
 solana-program = { path = "../program" }
 solana-sdk = { path = ".." }
-solana-secp256k1-program = { path = ".", features = [
-    "dev-context-only-utils",
-] }
+solana-secp256k1-program = { path = ".", features = ["dev-context-only-utils"] }
 
 [features]
-bincode = ["dep:bincode", "dep:solana-sdk-ids", "serde"]
+bincode = [
+    "dep:bincode",
+    "dep:solana-feature-set",
+    "dep:solana-instruction",
+    "dep:solana-precompile-error",
+    "dep:solana-sdk-ids",
+    "serde",
+]
 dev-context-only-utils = ["bincode"]
 serde = ["dep:serde", "dep:serde_derive"]
 
