--- a/sdk/secp256k1-program/Cargo.toml
+++ b/sdk/secp256k1-program/Cargo.toml
@@ -25,11 +25,17 @@ solana-sdk-ids = { workspace = true, optional = true }
 anyhow = { workspace = true }
 hex = { workspace = true }
 rand0-7 = { workspace = true }
+solana-account-info = { workspace = true }
 solana-hash = { workspace = true }
+solana-keccak-hasher = { workspace = true }
+solana-keypair = { workspace = true }
 solana-logger = { workspace = true }
-solana-program = { path = "../program" }
+solana-msg = { workspace = true }
+solana-program-error = { workspace = true }
 solana-sdk = { path = ".." }
 solana-secp256k1-program = { path = ".", features = ["dev-context-only-utils"] }
+solana-signer = { workspace = true }
+solana-sysvar = { workspace = true }
 
 [features]
 bincode = [
