--- a/sdk/rent-debits/Cargo.toml
+++ b/sdk/rent-debits/Cargo.toml
@@ -18,6 +18,8 @@ dev-context-only-utils = []
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
 
 [target.'cfg(target_os = "solana")'.dependencies]
 solana-define-syscall = { workspace = true }
