--- a/sdk/compute-budget-instruction/Cargo.toml
+++ b/sdk/compute-budget-instruction/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-compute-budget-instruction"
-description = "Solana compute budget instruction."
-documentation = "https://docs.rs/solana-compute-budget-instruction"
+name = "solana-compute-budget-interface"
+description = "Solana compute budget interface."
+documentation = "https://docs.rs/solana-compute-budget-interface"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
