remove solana-program from some sdk crates

--- a/sdk/precompiles/Cargo.toml
+++ b/sdk/precompiles/Cargo.toml
@@ -14,7 +14,7 @@ lazy_static = { workspace = true }
 solana-ed25519-program = { workspace = true }
 solana-feature-set = { workspace = true }
 solana-precompile-error = { workspace = true }
-solana-program = { workspace = true, default-features = false }
+solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-secp256k1-program = { workspace = true, features = ["bincode"] }
