make solana-feature-set optional

--- a/sdk/transaction/Cargo.toml
+++ b/sdk/transaction/Cargo.toml
@@ -13,7 +13,7 @@ edition = { workspace = true }
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
 solana-bincode = { workspace = true, optional = true }
-solana-feature-set = { workspace = true }
+solana-feature-set = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, optional = true }
 solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-hash = { workspace = true }
@@ -54,7 +54,7 @@ frozen-abi = [
     "dep:solana-frozen-abi-macro",
     "dep:solana-logger"
 ]
-precompiles = ["dep:solana-precompiles"]
+precompiles = ["dep:solana-feature-set", "dep:solana-precompiles"]
 serde = [
     "dep:serde",
     "dep:serde_derive",
