--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -175,6 +175,7 @@ solana-signature = { workspace = true, features = [
     "verify",
 ], optional = true }
 solana-signer = { workspace = true, optional = true }
+solana-system-transaction = { workspace = true }
 solana-time-utils = { workspace = true }
 solana-transaction = { workspace = true, features = [
     "blake3",
