--- a/thin-client/Cargo.toml
+++ b/thin-client/Cargo.toml
@@ -13,10 +13,23 @@ edition = { workspace = true }
 bincode = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
+solana-account = { workspace = true }
+solana-client-traits = { workspace = true }
+solana-clock = { workspace = true }
+solana-commitment-config = { workspace = true }
 solana-connection-cache = { workspace = true }
+solana-epoch-info = { workspace = true }
+solana-hash = { workspace = true }
+solana-instruction = { workspace = true }
+solana-keypair = { workspace = true }
+solana-program = { workspace = true, default-features = false }
+solana-pubkey = { workspace = true }
 solana-rpc-client = { workspace = true }
 solana-rpc-client-api = { workspace = true }
-solana-sdk = { workspace = true }
+solana-signature = { workspace = true }
+solana-signer = { workspace = true }
+solana-transaction = { workspace = true }
+solana-transaction-error = { workspace = true }
 
 [dev-dependencies]
 solana-logger = { workspace = true }
