--- a/sdk/inner-instruction/Cargo.toml
+++ b/sdk/inner-instruction/Cargo.toml
@@ -12,10 +12,10 @@ edition = { workspace = true }
 [dependencies]
 serde = { workspace = true, optional = true }
 serde_derive = { workspace = true, optional = true }
-solana-program = { workspace = true, default-features = false }
+solana-message = { workspace = true }
 
 [features]
-serde = ["dep:serde", "dep:serde_derive"]
+serde = ["dep:serde", "dep:serde_derive", "solana-message/serde"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
