--- a/rpc-client-nonce-utils/Cargo.toml
+++ b/rpc-client-nonce-utils/Cargo.toml
@@ -28,9 +28,11 @@ futures = { workspace = true }
 serde_json = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-fee-calculator = { workspace = true }
+solana-keypair = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-sdk = { workspace = true }
 solana-sha256-hasher = { workspace = true }
+solana-signer = { workspace = true }
 solana-system-interface = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
