--- a/sdk/transaction/Cargo.toml
+++ b/sdk/transaction/Cargo.toml
@@ -20,8 +20,8 @@ solana-frozen-abi-macro = { workspace = true, optional = true }
 solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
 solana-logger = { workspace = true, optional = true }
+solana-message = { workspace = true }
 solana-precompiles = { workspace = true, optional = true }
-solana-program = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-reserved-account-keys = { workspace = true }
 solana-sanitize = { workspace = true }
@@ -29,6 +29,7 @@ solana-sdk-ids = { workspace = true }
 solana-short-vec = { workspace = true, optional = true }
 solana-signature = { workspace = true }
 solana-signer = { workspace = true }
+solana-system-interface = { workspace = true, optional = true, features = ["bincode"] }
 solana-transaction-error = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -53,8 +54,15 @@ solana-transaction = { path = ".", features = ["dev-context-only-utils"] }
 static_assertions = { workspace = true }
 
 [features]
-bincode = ["dep:bincode", "dep:solana-bincode", "serde"]
-dev-context-only-utils = ["bincode", "precompiles", "serde", "verify"]
+bincode = [
+    "dep:bincode",
+    "dep:solana-bincode",
+    "dep:solana-system-interface",
+    "serde",
+    "solana-message/bincode",
+]
+blake3 = ["bincode", "solana-message/blake3"]
+dev-context-only-utils = ["blake3", "precompiles", "serde", "verify"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
@@ -65,9 +73,10 @@ serde = [
     "dep:serde",
     "dep:serde_derive",
     "dep:solana-short-vec",
+    "solana-message/serde",
     "solana-signature/serde",
 ]
-verify = ["solana-signature/verify"]
+verify = ["blake3", "solana-signature/verify"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
