--- a/sdk/client-traits/Cargo.toml
+++ b/sdk/client-traits/Cargo.toml
@@ -20,7 +20,7 @@ solana-program = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-signature = { workspace = true }
 solana-signer = { workspace = true }
-solana-transaction = { workspace = true }
+solana-transaction = { workspace = true, features = ["bincode"] }
 solana-transaction-error = { workspace = true }
 
 [package.metadata.docs.rs]
