--- a/rpc-client-api/Cargo.toml
+++ b/rpc-client-api/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = { workspace = true }
 solana-account = { workspace = true }
 solana-account-decoder-client-types = { workspace = true }
 solana-clock = { workspace = true }
-solana-commitment-config = { workspace = true }
+solana-commitment-config = { workspace = true, features = ["serde"] }
 solana-fee-calculator = { workspace = true }
 solana-inflation = { workspace = true }
 solana-inline-spl = { workspace = true }
