--- a/rpc-client-api/Cargo.toml
+++ b/rpc-client-api/Cargo.toml
@@ -36,6 +36,7 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 const_format = { workspace = true }
+solana-pubkey = { workspace = true, features = ["rand"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
