remove solana-program and activate required feature

--- a/sdk/system-transaction/Cargo.toml
+++ b/sdk/system-transaction/Cargo.toml
@@ -15,8 +15,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 solana-hash = { workspace = true }
 solana-keypair = { workspace = true }
-solana-program = { workspace = true }
+solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-signer = { workspace = true }
 solana-system-interface = { workspace = true, features = ["bincode"] }
-solana-transaction = { workspace = true }
+solana-transaction = { workspace = true, features = ["bincode"] }
