--- a/svm-transaction/Cargo.toml
+++ b/svm-transaction/Cargo.toml
@@ -11,12 +11,14 @@ edition = { workspace = true }
 
 [dependencies]
 solana-hash = { workspace = true }
-solana-program = { workspace = true, default-features = false }
+solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-signature = { workspace = true }
 solana-transaction = { workspace = true }
 
 [dev-dependencies]
+solana-message = { workspace = true, features = ["bincode"] }
 solana-nonce = { workspace = true }
+solana-system-interface = { workspace = true }
 static_assertions = { workspace = true }
