--- a/rpc-client-api/Cargo.toml
+++ b/rpc-client-api/Cargo.toml
@@ -24,7 +24,7 @@ solana-account = { workspace = true }
 solana-account-decoder-client-types = { workspace = true }
 solana-clock = { workspace = true }
 solana-commitment-config = { workspace = true, features = ["serde"] }
-solana-fee-calculator = { workspace = true }
+solana-fee-calculator = { workspace = true, features = ["serde"] }
 solana-inflation = { workspace = true }
 solana-inline-spl = { workspace = true }
 solana-pubkey = { workspace = true }
