--- a/sdk/signature/Cargo.toml
+++ b/sdk/signature/Cargo.toml
@@ -30,7 +30,7 @@ curve25519-dalek = { workspace = true }
 ed25519-dalek = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
-solana-program = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-short-vec = { workspace = true }
 solana-signature = { path = ".", features = ["serde"] }
 
