remove solana-program

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -29,7 +29,7 @@ solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
 solana-keypair = { workspace = true }
 solana-measure = { workspace = true }
-solana-program = { workspace = true, default-features = false }
+solana-message = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-quic-client = { workspace = true }
