--- a/tpu-client/Cargo.toml
+++ b/tpu-client/Cargo.toml
@@ -23,8 +23,8 @@ solana-commitment-config = { workspace = true }
 solana-connection-cache = { workspace = true }
 solana-epoch-info = { workspace = true }
 solana-measure = { workspace = true }
-solana-net-utils = { workspace = true }
 solana-message = { workspace = true, optional = true }
+solana-net-utils = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-quic-definitions = { workspace = true }
@@ -44,7 +44,7 @@ default = ["spinner"]
 spinner = [
     "dep:indicatif",
     "dep:solana-message",
-    "solana-rpc-client/spinner",
+    "solana-rpc-client/spinner"
 ]
 
 [package.metadata.docs.rs]
