--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -49,7 +49,7 @@ jsonrpc-core = { workspace = true }
 jsonrpc-http-server = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-keypair = { workspace = true }
-solana-program = { workspace = true }
+solana-program = { workspace = true, default-features = false }
 solana-sdk = { path = "../sdk" }
 solana-signer = { workspace = true }
 static_assertions = { workspace = true }
