remove solana-sdk from direct dev deps

--- a/rpc-client/Cargo.toml
+++ b/rpc-client/Cargo.toml
@@ -50,7 +50,7 @@ jsonrpc-http-server = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-keypair = { workspace = true }
 solana-program = { workspace = true, default-features = false }
-solana-sdk = { path = "../sdk" }
+solana-system-transaction = { workspace = true }
 solana-signer = { workspace = true }
 static_assertions = { workspace = true }
 
