--- a/sdk/offchain-message/Cargo.toml
+++ b/sdk/offchain-message/Cargo.toml
@@ -30,3 +30,5 @@ verify = ["dep:solana-pubkey", "solana-signature/verify"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+all-features = true
+rustdoc-args = ["--cfg=docsrs"]
