--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -30,14 +30,13 @@ solana-frozen-abi-macro = { workspace = true, optional = true, features = [
 ] }
 solana-hash = { workspace = true }
 solana-keypair = { workspace = true, optional = true }
-solana-message = { workspace = true, optional = true }
+solana-message = { workspace = true }
 solana-metrics = { workspace = true }
 solana-packet = { workspace = true, features = ["bincode"] }
-solana-program = { workspace = true, default-features = false }
 solana-pubkey = { workspace = true, default-features = false }
 solana-rayon-threadlimit = { workspace = true }
 solana-sdk = { workspace = true, optional = true }
-solana-sdk-ids = { workspace = true, optional = true }
+solana-sdk-ids = { workspace = true }
 solana-short-vec = { workspace = true }
 solana-signature = { workspace = true, features = ["verify"] }
 solana-signer = { workspace = true, optional = true }
@@ -66,8 +65,6 @@ test-case = { workspace = true }
 dev-context-only-utils = [
     "dep:solana-clock",
     "dep:solana-keypair",
-    "dep:solana-message",
-    "dep:solana-sdk-ids",
     "dep:solana-signer",
     "dep:solana-system-interface",
     "dep:solana-system-transaction",
