--- a/accounts-db/Cargo.toml
+++ b/accounts-db/Cargo.toml
@@ -48,6 +48,7 @@ solana-lattice-hash = { workspace = true }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true }
 solana-nohash-hasher = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-rayon-threadlimit = { workspace = true }
 solana-sdk = { workspace = true }
 solana-stake-program = { workspace = true, optional = true }
@@ -87,6 +88,7 @@ dev-context-only-utils = [
     "dep:qualifier_attr",
     "dep:solana-stake-program",
     "dep:solana-vote-program",
+    "solana-pubkey/rand",
 ]
 frozen-abi = [
     "dep:solana-frozen-abi",
