--- a/rpc-response/Cargo.toml
+++ b/rpc-response/Cargo.toml
@@ -15,7 +15,7 @@ serde = { workspace = true }
 serde_derive = { workspace = true }
 solana-account-decoder-client-types = { workspace = true }
 solana-clock = { workspace = true }
-solana-fee-calculator = { workspace = true }
+solana-fee-calculator = { workspace = true, features = ["serde"] }
 solana-inflation = { workspace = true }
 solana-transaction-error = { workspace = true }
 solana-transaction-status-client-types = { workspace = true }
