move inner_instruction.rs to solana-message

--- a/sdk/message/Cargo.toml
+++ b/sdk/message/Cargo.toml
@@ -62,6 +62,7 @@ frozen-abi = [
     "solana-hash/frozen-abi",
     "solana-pubkey/frozen-abi",
 ]
+inner-instruction = []
 serde = [
     "dep:serde",
     "dep:serde_derive",
