--- a/cost-model/Cargo.toml
+++ b/cost-model/Cargo.toml
@@ -16,6 +16,7 @@ log = { workspace = true }
 solana-bincode = { workspace = true }
 solana-borsh = { workspace = true }
 solana-builtins-default-costs = { workspace = true }
+solana-clock = { workspace = true }
 solana-compute-budget = { workspace = true }
 solana-compute-budget-instruction = { workspace = true }
 solana-compute-budget-interface = { workspace = true }
