--- a/program-runtime/Cargo.toml
+++ b/program-runtime/Cargo.toml
@@ -69,6 +69,7 @@ name = "solana_program_runtime"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
+dummy-for-ci-check = ["metrics"]
 frozen-abi = [
     "dep:solana-frozen-abi",
     "dep:solana-frozen-abi-macro",
