remove solana-sdk from unified-scheduler-logic

--- a/unified-scheduler-logic/Cargo.toml
+++ b/unified-scheduler-logic/Cargo.toml
@@ -11,8 +11,9 @@ edition = { workspace = true }
 
 [dependencies]
 assert_matches = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-runtime-transaction = { workspace = true }
-solana-sdk = { workspace = true }
+solana-transaction = { workspace = true }
 static_assertions = { workspace = true }
 
 [dev-dependencies]
