--- a/unified-scheduler-logic/Cargo.toml
+++ b/unified-scheduler-logic/Cargo.toml
@@ -17,6 +17,8 @@ solana-transaction = { workspace = true }
 static_assertions = { workspace = true }
 
 [dev-dependencies]
+solana-instruction = { workspace = true }
+solana-message = { workspace = true }
 solana-runtime-transaction = { workspace = true, features = [
     "dev-context-only-utils",
 ] }
