--- a/send-transaction-service/Cargo.toml
+++ b/send-transaction-service/Cargo.toml
@@ -16,18 +16,30 @@ itertools = { workspace = true }
 log = { workspace = true }
 solana-client = { workspace = true }
 solana-connection-cache = { workspace = true }
+solana-hash = { workspace = true }
+solana-keypair = { workspace = true }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true }
+solana-nonce-account = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-quic-client = { workspace = true }
 solana-runtime = { workspace = true }
-solana-sdk = { workspace = true }
+solana-signature = { workspace = true }
+solana-time-utils = { workspace = true }
 solana-tpu-client-next = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tokio-util = { workspace = true }
 
 [dev-dependencies]
+solana-account = { workspace = true }
+solana-fee-calculator = { workspace = true }
 solana-logger = { workspace = true }
+solana-nonce = { workspace = true }
 solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
+solana-sdk = { workspace = true }
+solana-sdk-ids = { workspace = true }
+solana-signer = { workspace = true }
+solana-system-transaction = { workspace = true }
 
 [features]
 dev-context-only-utils = []
