--- a/cli-output/Cargo.toml
+++ b/cli-output/Cargo.toml
@@ -50,6 +50,7 @@ spl-memo = { workspace = true, features = ["no-entrypoint"] }
 ed25519-dalek = { workspace = true }
 solana-keypair = { workspace = true }
 solana-signer = { workspace = true }
+solana-transaction-context = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
