--- a/rpc-client-api-core/Cargo.toml
+++ b/rpc-client-api-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-rpc-client-api"
+name = "solana-rpc-client-api-core"
 description = "Solana Client Common Utilities"
-documentation = "https://docs.rs/solana-rpc-client-api"
+documentation = "https://docs.rs/solana-rpc-client-api-core"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
@@ -10,20 +10,28 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-anyhow = { workspace = true }
-jsonrpc-core = { workspace = true }
-reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
-reqwest-middleware = { workspace = true }
+base64 = { workspace = true }
+bs58 = { workspace = true, features = ["std"] }
+semver = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
+solana-account = { workspace = true }
 solana-account-decoder-client-types = { workspace = true }
 solana-clock = { workspace = true }
-solana-rpc-client-api-core = { workspace = true }
-solana-signer = { workspace = true }
+solana-commitment-config = { workspace = true, features = ["serde"] }
+solana-fee-calculator = { workspace = true, features = ["serde"] }
+solana-inflation = { workspace = true }
+solana-inline-spl = { workspace = true }
+solana-pubkey = { workspace = true }
 solana-transaction-error = { workspace = true }
 solana-transaction-status-client-types = { workspace = true }
+solana-version = { workspace = true }
 thiserror = { workspace = true }
+
+[dev-dependencies]
+const_format = { workspace = true }
+solana-pubkey = { workspace = true, features = ["rand"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
