--- a/Cargo.toml
+++ b/Cargo.toml
@@ -736,6 +736,7 @@ crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d
 #
 # There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
 # comments and the overrides in sync.
+solana-clock = { path = "sdk/clock" }
 solana-curve25519 = { path = "curves/curve25519" }
 solana-account-info = { path = "sdk/account-info" }
 solana-borsh = { path = "sdk/borsh" }
