activate solana-stake-interface/serde when serde is activated in solana-sysvar

--- a/sdk/sysvar/Cargo.toml
+++ b/sdk/sysvar/Cargo.toml
@@ -76,6 +76,7 @@ serde = [
     "solana-rent/serde",
     "solana-slot-hashes/serde",
     "solana-slot-history/serde",
+    "solana-stake-interface/serde",
 ]
 
 [package.metadata.docs.rs]
