--- a/Cargo.toml
+++ b/Cargo.toml
@@ -332,6 +332,7 @@ dlopen2 = "0.5.0"
 eager = "0.1.0"
 ed25519-dalek = "=1.0.1"
 ed25519-dalek-bip32 = "0.2.0"
+elliptic-curve = "0.13.8"
 enum-iterator = "1.5.0"
 env_logger = "0.9.3"
 etcd-client = "0.11.1"
@@ -372,6 +373,7 @@ jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
 jsonrpc-ipc-server = "18.0.0"
 jsonrpc-pubsub = "18.0.0"
+k256 = "0.13.4"
 lazy-lru = "0.1.3"
 lazy_static = "1.5.0"
 libc = "0.2.169"
