--- a/Cargo.toml
+++ b/Cargo.toml
@@ -373,7 +373,7 @@ jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
 jsonrpc-ipc-server = "18.0.0"
 jsonrpc-pubsub = "18.0.0"
-k256 = "0.13.4"
+k256 = { version = "0.13.4", default-features = false }
 lazy-lru = "0.1.3"
 lazy_static = "1.5.0"
 libc = "0.2.169"
