--- a/sdk/sdk/Cargo.toml
+++ b/sdk/sdk/Cargo.toml
@@ -184,8 +184,9 @@ wasm-bindgen = { workspace = true }
 [dev-dependencies]
 curve25519-dalek = { workspace = true }
 ed25519-dalek = { workspace = true }
-libsecp256k1 = { workspace = true, features = ["hmac"] }
+k256 = { workspace = true }
 openssl = { workspace = true }
+rand = { workspace = true }
 rand0-7 = { workspace = true }
 serde_derive = { workspace = true }
 serde_with = { workspace = true, features = ["macros"] }
