--- a/svm/Cargo.toml
+++ b/svm/Cargo.toml
@@ -63,10 +63,11 @@ name = "solana_svm"
 assert_matches = { workspace = true }
 bincode = { workspace = true }
 ed25519-dalek = { workspace = true }
+k256 = { workspace = true }
 lazy_static = { workspace = true }
-libsecp256k1 = { workspace = true }
 openssl = { workspace = true }
 prost = { workspace = true }
+rand = { workspace = true }
 rand0-7 = { workspace = true }
 shuttle = { workspace = true }
 solana-clock = { workspace = true }
