--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -23,7 +23,7 @@ byteorder = "1.3.2"
 elf = "0.0.10"
 getrandom = "0.2.10"
 itertools = "0.10.1"
-libsecp256k1 = { version = "0.7.0", default-features = false }
+k256 = { version = "0.13.4", default-features = false }
 log = "0.4.11"
 miow = "0.3.6"
 net2 = "0.2.37"
