missing feature activation

--- a/programs/sbf/rust/secp256k1_recover/Cargo.toml
+++ b/programs/sbf/rust/secp256k1_recover/Cargo.toml
@@ -9,7 +9,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-k256 = { workspace = true }
+k256 = { workspace = true, features = ["ecdsa"] }
 solana-program = { workspace = true }
 solana-secp256k1-recover = { workspace = true }
 
