--- a/programs/sbf/rust/rand/Cargo.toml
+++ b/programs/sbf/rust/rand/Cargo.toml
@@ -12,6 +12,7 @@ edition = { workspace = true }
 getrandom = { workspace = true, features = ["custom"] }
 rand = { workspace = true }
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
