--- a/programs/sbf/rust/128bit/Cargo.toml
+++ b/programs/sbf/rust/128bit/Cargo.toml
@@ -9,7 +9,7 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 solana-sbf-rust-128bit-dep = { workspace = true }
 
 [lib]
