--- a/programs/sbf/rust/custom_heap/Cargo.toml
+++ b/programs/sbf/rust/custom_heap/Cargo.toml
@@ -10,6 +10,7 @@ edition = { workspace = true }
 
 [dependencies]
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [features]
 default = ["custom-heap"]
