--- a/programs/sbf/rust/error_handling/Cargo.toml
+++ b/programs/sbf/rust/error_handling/Cargo.toml
@@ -13,6 +13,7 @@ num-derive = { workspace = true }
 num-traits = { workspace = true }
 solana-decode-error = { workspace = true }
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 thiserror = { workspace = true }
 
 [lib]
