--- a/programs/sbf/rust/realloc_invoke/Cargo.toml
+++ b/programs/sbf/rust/realloc_invoke/Cargo.toml
@@ -10,6 +10,7 @@ edition = { workspace = true }
 
 [dependencies]
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 solana-sbf-rust-realloc-dep = { workspace = true }
 solana-sbf-rust-realloc-invoke-dep = { workspace = true }
 
