--- a/programs/sbf/rust/spoof1/Cargo.toml
+++ b/programs/sbf/rust/spoof1/Cargo.toml
@@ -10,6 +10,7 @@ edition = { workspace = true }
 
 [dependencies]
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
