--- a/programs/sbf/rust/sysvar/Cargo.toml
+++ b/programs/sbf/rust/sysvar/Cargo.toml
@@ -11,6 +11,7 @@ edition = { workspace = true }
 [dependencies]
 bincode =  { workspace = true }
 solana-program = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
