remove more solana-program usage

--- a/programs/sbf/Cargo.toml
+++ b/programs/sbf/Cargo.toml
@@ -38,17 +38,22 @@ solana-account-info = { path = "../../sdk/account-info", version = "=2.2.0" }
 solana-accounts-db = { path = "../../accounts-db", version = "=2.2.0" }
 solana-bn254 = { path = "../../sdk/bn254", version = "=2.2.0" }
 solana-bpf-loader-program = { path = "../bpf_loader", version = "=2.2.0" }
+solana-big-mod-exp = { path = "../../sdk/big-mod-exp", version = "=2.2.0" }
 solana-cli-output = { path = "../../cli-output", version = "=2.2.0" }
 solana-compute-budget = { path = "../../compute-budget", version = "=2.2.0" }
 solana-compute-budget-instruction = { path = "../../compute-budget-instruction", version = "=2.2.0" }
+solana-cpi = { path = "../../sdk/cpi", version = "=2.2.0" }
 solana-curve25519 = { path = "../../curves/curve25519", version = "=2.2.0" }
 solana-decode-error = { path = "../../sdk/decode-error", version = "=2.2.0" }
 solana-feature-set = { path = "../../sdk/feature-set", version = "=2.2.0" }
 solana-fee = { path = "../../fee", version = "=2.2.0" }
+solana-instruction = { path = "../../sdk/instruction", version = "=2.2.0" }
+solana-keccak-hasher = { path = "../../sdk/keccak-hasher", version = "=2.2.0" }
 solana-ledger = { path = "../../ledger", version = "=2.2.0" }
 solana-log-collector = { path = "../../log-collector", version = "=2.2.0" }
 solana-logger = { path = "../../sdk/logger", version = "=2.2.0" }
 solana-measure = { path = "../../measure", version = "=2.2.0" }
+solana-msg = { path = "../../sdk/msg", version = "=2.2.0" }
 solana-poseidon = { path = "../../poseidon/", version = "=2.2.0" }
 solana-program = { path = "../../sdk/program", version = "=2.2.0" }
 solana-program-entrypoint = { path = "../../sdk/program-entrypoint", version = "=2.2.0" }
