--- a/programs/sbf/rust/curve25519/Cargo.toml
+++ b/programs/sbf/rust/curve25519/Cargo.toml
@@ -10,7 +10,8 @@ edition = { workspace = true }
 
 [dependencies]
 solana-curve25519 = { workspace = true }
-solana-program = { workspace = true }
+solana-msg = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
