--- a/programs/sbf/rust/caller_access/Cargo.toml
+++ b/programs/sbf/rust/caller_access/Cargo.toml
@@ -9,8 +9,13 @@ license = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-solana-program = { workspace = true }
+solana-account-info = { workspace = true }
+solana-cpi = { workspace = true }
+solana-instruction = { workspace = true }
 solana-program-entrypoint = { workspace = true }
+solana-program-error = { workspace = true }
+solana-msg = { workspace = true }
+solana-pubkey = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
