--- a/programs/sbf/rust/poseidon/Cargo.toml
+++ b/programs/sbf/rust/poseidon/Cargo.toml
@@ -11,7 +11,8 @@ edition = { workspace = true }
 [dependencies]
 array-bytes = { workspace = true }
 solana-poseidon = { workspace = true }
-solana-program = { workspace = true }
+solana-msg = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
