--- a/programs/sbf/rust/secp256k1_recover/Cargo.toml
+++ b/programs/sbf/rust/secp256k1_recover/Cargo.toml
@@ -10,7 +10,9 @@ edition = { workspace = true }
 
 [dependencies]
 libsecp256k1 = { workspace = true }
-solana-program = { workspace = true }
+solana-keccak-hasher = { workspace = true }
+solana-msg = { workspace = true }
+solana-program-entrypoint = { workspace = true }
 solana-secp256k1-recover = { workspace = true }
 
 [lib]
