--- a/rpc-client-types/Cargo.toml
+++ b/rpc-client-types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-rpc-client-api-core"
-description = "Solana RPC Client Core Types"
-documentation = "https://docs.rs/solana-rpc-client-api-core"
+name = "solana-rpc-client-types"
+description = "Solana Client Common Utilities"
+documentation = "https://docs.rs/solana-rpc-client-types"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
